View Single Invoice added,Spacing corrected

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -51,6 +51,9 @@ body{
 .search{
     margin: 30px 0 ;
 }
+.single-invoice{
+    padding-top: 30px;
+}
 .single-invoice hr{
     color:#4cb2b7;
 }
